# openclaw-zig-port

./: .gitignore  README.md  build.zig  build.zig.zon  mkdocs.yml
docs/: architecture.md  browser-auth.md  feature-coverage.md  getting-started.md  github-pages.md  index.md  memory-edge.md  operations.md  package-publishing.md  rpc-reference.md  security-and-diagnostics.md  telegram-channel.md
python/openclaw-zig-rpc-client/: README.md  pyproject.toml
python/openclaw-zig-rpc-client/src/openclaw_zig_rpc_client/: __init__.py  cli.py  client.py
python/openclaw-zig-rpc-client/tests/: test_client.py
scripts/: appliance-baremetal-closure-smoke-check.ps1  appliance-control-plane-smoke-check.ps1  appliance-minimal-profile-smoke-check.ps1  appliance-restart-recovery-smoke-check.ps1  baremetal-qemu-active-task-terminate-baseline-probe-check.ps1  baremetal-qemu-active-task-terminate-failover-probe-check.ps1  baremetal-qemu-active-task-terminate-final-collapse-probe-check.ps1  baremetal-qemu-active-task-terminate-repeat-idempotent-probe-check.ps1  baremetal-qemu-active-task-terminate-survivor-progress-probe-check.ps1  baremetal-qemu-allocator-free-failure-probe-check.ps1  baremetal-qemu-allocator-saturation-reset-baseline-probe-check.ps1  baremetal-qemu-allocator-saturation-reset-fresh-restart-probe-check.ps1  baremetal-qemu-allocator-saturation-reset-last-record-probe-check.ps1  baremetal-qemu-allocator-saturation-reset-post-reset-baseline-probe-check.ps1  baremetal-qemu-allocator-saturation-reset-probe-check.ps1  baremetal-qemu-allocator-saturation-reuse-probe-check.ps1  (+360 more)
(+67 files in other folders)
